--- a/src/app.module.css
+++ b/src/app.module.css
@@ -13,3 +13,9 @@
 .list {
     flex: 1 1 30%;
 }
+
+@media screen and (max-width:720px) {
+    .content {
+        flex-direction: column;
+    }
+}
