--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -43,3 +43,9 @@
   .channel {
     font-size: 0.6rem;
   }
+
+  @media screen and (max-width:720px) {
+    .container.grid {
+      width: 100%;
+    }
+  }
